--- a/assets/resources/styles/less/modules/_form.less
+++ b/assets/resources/styles/less/modules/_form.less
@@ -74,8 +74,8 @@
 			overflow: hidden;
 
 			.fl {
-				display: flex;
-				justify-content: space-between;
+				// display: flex;
+				// justify-content: space-between;
 
 				select {
 					border: none;
@@ -234,7 +234,7 @@
 .en-checkbox_rounded {
 	position: relative;
 	display: inline-block;
-	width: 30%;
+	width: 20%;
 	vertical-align: middle;
 	user-select: none;
 	// text-align: center;
@@ -291,6 +291,11 @@
 .en-checkbox_rounded-box img {
 	width: 70px;
 	filter: grayscale(1);
+}
+
+.en-checkbox_rounded-box lottie-player {
+	width: 250px;
+	margin: auto;
 }
 
 .en-checkbox_rounded-title {
@@ -1158,8 +1163,8 @@
 
 	.range-input input::-webkit-slider-thumb {
 		-webkit-appearance: none;
-		width: 20px;
-		height: 20px;
+		width: 30px;
+		height: 30px;
 		background-color: #eee;
 		border: 2px solid #4471ef;
 		border-radius: 50%;
