--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2057,6 +2057,8 @@
         .listi {
             width: 90%;
             margin-bottom: 6%;
+            font-family: 'Ageo-SemiBold';
+            letter-spacing: 1px;
 
             ul {
                 display: flex;
