--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -1957,7 +1957,7 @@
     .hro-img {
         display: inherit;
         position: absolute;
-        top: -360px;
+        top: -430px;
         margin: auto;
         left: 0;
 
@@ -4564,6 +4564,7 @@
 
                     .port {
                         position: relative;
+                        overflow: inherit;
 
                         h2 {
                             position: absolute;
