--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -1174,4 +1174,32 @@ header {
 		height: 4rem;
 		z-index: 99;
 	}
+
+	.nav__showreel {
+		bottom: -4.833333vw;
+	}
+
+	.nav__newsletter-talk {
+		position: absolute;
+		bottom: -23.833333vw;
+		right: 0;
+		display: -webkit-box;
+		font-family: 'Ageo';
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		align-items: center;
+		z-index: 999;
+		width: 100%;
+		justify-content: space-between;
+	}
+
+	.sub-toggle {
+		top: 2px;
+	}
+
+	.nav__newsletter-talk>div {
+		margin-left: 0px;
+	}
 }
