--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -2616,6 +2616,9 @@ ul.product-tags li a {
     }
 
 
+    .sub-toggle {
+        top: 2px;
+    }
 
     .en-page-loader {
         width: 100%;
@@ -2694,7 +2697,7 @@ ul.product-tags li a {
 
     .menu-widget-right,
     .menu-widget-left {
-        bottom: 0;
+        bottom: 50px;
         left: 0;
 
     }
