--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1126,7 +1126,7 @@
         border: 0;
         border-radius: 0;
         outline: 0 !important;
-        font-family: 'NeueHaasDisplay-bol';
+        font-family: 'Ageo-Semibold';
         font-size: 1.4em;
         letter-spacing: 1px;
         line-height: inherit;
