--- a/assets/resources/styles/css/st.css
+++ b/assets/resources/styles/css/st.css
@@ -1,313 +1,6 @@
 /*! locomotive-scroll v3.2.8 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-html {
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-}
 
-body {
-  margin: 0;
-}
-
-main {
-  display: block;
-}
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-
-pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-a {
-  background-color: transparent;
-}
-
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-img {
-  border-style: none;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
-}
-
-button,
-input {
-  overflow: visible;
-}
-
-button,
-select {
-  text-transform: none;
-}
-
-[type="button"],
-[type="reset"],
-[type="submit"],
-button {
-  -webkit-appearance: button;
-}
-
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner,
-button::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring,
-button:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-legend {
-  box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
-}
-
-progress {
-  vertical-align: baseline;
-}
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type="search"] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
-}
-
-details {
-  display: block;
-}
-
-summary {
-  display: list-item;
-}
-
-[hidden],
-template {
-  display: none;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-[hidden],
-template {
-  display: none;
-}
-
-*,
-:after,
-:before {
-  box-sizing: inherit;
-}
-
-address {
-  font-style: inherit;
-}
-
-cite,
-dfn,
-em,
-i {
-  font-style: italic;
-}
-
-b,
-strong {
-  font-weight: 700;
-}
-
-a {
-  text-decoration: none;
-}
-
-a svg {
-  pointer-events: none;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-figure,
-ol,
-p,
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-[tabindex],
-a,
-area,
-button,
-input,
-label,
-select,
-textarea {
-  touch-action: manipulation;
-}
-
-[hreflang]>abbr[title] {
-  text-decoration: none;
-}
-
-table {
-  border-spacing: 0;
-  border-collapse: collapse;
-}
-
-hr {
-  display: block;
-  margin: 1em 0;
-  padding: 0;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #272727;
-}
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
-}
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-img,
-svg {
-  max-width: 100%;
-  height: auto;
-}
-
-img[height],
-img[width],
-svg[height],
-svg[width] {
-  max-width: none;
-}
-
-img {
-  font-style: italic;
-}
-
-svg {
-  /* fill: currentColor; */
-}
-
-input,
-select,
-textarea {
-  /* display: block;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    outline: 0;
-    border: 0;
-    border-radius: 0;
-    background: none transparent;
-    color: inherit;
-    font: inherit;
-    line-height: normal;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none; */
-}
 
 select {
   text-transform: none;
@@ -358,6 +51,7 @@ button:hover {
   text-decoration: none;
 }
 
+/* 
 html {
   color: #222;
   line-height: 1.5;
@@ -403,7 +97,7 @@ html {
   html {
     font-size: 24px;
   }
-}
+} */
 
 html:not(.has-scroll-init) {
   cursor: wait;
