--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -4719,6 +4719,10 @@
         }
     }
 
+    .patr .el-bg {
+        z-index: 0;
+    }
+
     .qu {
         .module--header__image {
             justify-content: center;
