--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3720,12 +3720,35 @@
 
         }
 
+        .container .parh {
+            font-size: 1.2em;
+            line-height: 1.6;
+        }
 
+    }
+
+    .about-page .container {
+        width: 90%;
+    }
+
+    .about-page .container .flex {
+        padding: 31px 10px;
     }
 
     .t-d3-fluid {
         font-size: 7.8em;
     }
+
+    .client-section .container {
+        width: 90%;
+    }
+
+    .client-section .container .parh {
+        font-size: 1.1em;
+        padding-right: 0;
+        line-height: 1.6;
+    }
+
 
     .about-us-section {
         .about-us-image {
