--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1872,15 +1872,10 @@ section.horizontal .animation-wrap.to-left {
     }
 
     .container {
-      width: 80%;
+      width: 90%;
 
       h2 {
-        padding: 20px 0%;
         font-size: 3em;
-        color: #2b2b2b;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        font-family: 'NeueHaasDisplay-me';
       }
 
       .approach-lis {
@@ -1892,7 +1887,7 @@ section.horizontal .animation-wrap.to-left {
         .flex-con {
           display: flex;
           justify-content: normal;
-          align-items: center;
+          align-items: baseline;
           margin: 0%;
           position: relative;
           margin-bottom: 10%;
@@ -1901,32 +1896,26 @@ section.horizontal .animation-wrap.to-left {
 
           .ap-no {
             position: relative;
-            margin-right: 3%;
-            width: 36%;
+            margin-right: 0%;
+            width: 10%;
             overflow: visible;
 
             h6 {
               .numb {
-                font-size: 6em;
-                font-family: 'NeueHaasDisplay-me';
-                color: #00000028;
-                letter-spacing: 1px;
-                text-transform: uppercase;
-                position: relative;
+                font-size: 5em;
+                color: #00000012;
               }
-
-
 
             }
           }
 
           .ap-prah {
             padding-right: 0%;
+            position: relative;
+            top: -16px;
 
             .cons {
-              font-size: 1.1em;
-              /* position: absolute; */
-              /* left: 10px; */
+              font-size: 1.4em;
               text-align: center;
               color: #2b2b2b;
               text-transform: uppercase;
@@ -1955,13 +1944,16 @@ section.horizontal .animation-wrap.to-left {
   }
 
   .services-s {
-    padding: 0px 0%;
+    padding: 0px 4%;
 
     .p-right {
       padding-right: 0%;
     }
   }
 
+  .services-s .image img {
+    width: 100%;
+  }
 
 
   .services-s .p-left {
@@ -2091,7 +2083,7 @@ section.horizontal .animation-wrap.to-left {
     }
 
     .top-h h1 {
-      font-size: 4.5em;
+      font-size: 3.4em;
 
     }
 
@@ -2105,7 +2097,7 @@ section.horizontal .animation-wrap.to-left {
     padding: 8% 5%;
 
     p {
-      font-size: 2.5em;
+      font-size: 2em;
     }
   }
 
@@ -2126,6 +2118,14 @@ section.horizontal .animation-wrap.to-left {
     }
   }
 
+  .ser-c .container {
+    width: 90%;
+  }
+
+  .scroll-sec2 .container {
+    width: 90%;
+  }
+
   .scroll-sec2 .back-text {
     top: -6px;
   }
@@ -2137,7 +2137,7 @@ section.horizontal .animation-wrap.to-left {
 
   .scroll-sec2 .container h2 {
     padding: 19px 0%;
-    font-size: 1.9em;
+    font-size: 1.4em;
     padding-right: 0%;
     color: #000000;
     line-height: 1.5;
@@ -2148,7 +2148,7 @@ section.horizontal .animation-wrap.to-left {
 
   .details-f .cont {
     width: 100%;
-    padding-right: 4.6%;
+    padding-right: 0;
   }
 
   .details-f .cont p {
@@ -2168,10 +2168,18 @@ section.horizontal .animation-wrap.to-left {
   }
 
   .scroll-sec2 .container .bo-h {
-    font-size: 2.2em;
+    font-size: 1.9em;
     padding-right: 0%;
-    text-align: center;
-    line-height: 1.5;
+    text-align: left;
+    line-height: 1.3;
+  }
+
+  .scroll-sec2 .container .bo-h img {
+    position: absolute;
+    width: 30px;
+    top: 0;
+    right: 0;
+    -webkit-animation: rotation 17s infinite linear;
   }
 
   .serv {
