--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -8044,8 +8044,26 @@ header {
     font-size: 4.7em;
     right: -9px;
   }
+  #about2 .container .parh {
+    font-size: 1.2em;
+    line-height: 1.6;
+  }
+  .about-page .container {
+    width: 90%;
+  }
+  .about-page .container .flex {
+    padding: 31px 10px;
+  }
   .t-d3-fluid {
     font-size: 7.8em;
+  }
+  .client-section .container {
+    width: 90%;
+  }
+  .client-section .container .parh {
+    font-size: 1.1em;
+    padding-right: 0;
+    line-height: 1.6;
   }
   .about-us-section .about-us-image {
     width: 100%;
@@ -10386,15 +10404,10 @@ section.horizontal .animation-wrap.to-left {
     margin-top: 0 !important;
   }
   .aproch .container {
-    width: 80%;
+    width: 90%;
   }
   .aproch .container h2 {
-    padding: 20px 0%;
     font-size: 3em;
-    color: #2b2b2b;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-family: 'NeueHaasDisplay-me';
   }
   .aproch .container .approach-lis {
     margin-top: 10%;
@@ -10414,9 +10427,9 @@ section.horizontal .animation-wrap.to-left {
     -webkit-box-pack: normal;
         -ms-flex-pack: normal;
             justify-content: normal;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
     margin: 0%;
     position: relative;
     margin-bottom: 10%;
@@ -10425,25 +10438,21 @@ section.horizontal .animation-wrap.to-left {
   }
   .aproch .container .approach-lis .flex-con .ap-no {
     position: relative;
-    margin-right: 3%;
-    width: 36%;
+    margin-right: 0%;
+    width: 10%;
     overflow: visible;
   }
   .aproch .container .approach-lis .flex-con .ap-no h6 .numb {
-    font-size: 6em;
-    font-family: 'NeueHaasDisplay-me';
-    color: #00000028;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    position: relative;
+    font-size: 5em;
+    color: #00000012;
   }
   .aproch .container .approach-lis .flex-con .ap-prah {
     padding-right: 0%;
+    position: relative;
+    top: -16px;
   }
   .aproch .container .approach-lis .flex-con .ap-prah .cons {
-    font-size: 1.1em;
-    /* position: absolute; */
-    /* left: 10px; */
+    font-size: 1.4em;
     text-align: center;
     color: #2b2b2b;
     text-transform: uppercase;
@@ -10463,10 +10472,13 @@ section.horizontal .animation-wrap.to-left {
     overflow: hidden;
   }
   .services-s {
-    padding: 0px 0%;
+    padding: 0px 4%;
   }
   .services-s .p-right {
     padding-right: 0%;
+  }
+  .services-s .image img {
+    width: 100%;
   }
   .services-s .p-left {
     padding-left: 0%;
@@ -10577,7 +10589,7 @@ section.horizontal .animation-wrap.to-left {
     width: 100% !important;
   }
   .ser-hero .top-h h1 {
-    font-size: 4.5em;
+    font-size: 3.4em;
   }
   .ser-hero .top-h .h1-r {
     margin-left: 17%;
@@ -10587,7 +10599,7 @@ section.horizontal .animation-wrap.to-left {
     padding: 8% 5%;
   }
   .bol-prh p {
-    font-size: 2.5em;
+    font-size: 2em;
   }
   .ser-c .flex-con {
     display: block;
@@ -10601,6 +10613,12 @@ section.horizontal .animation-wrap.to-left {
     padding-left: 20px;
     margin-top: 30px;
   }
+  .ser-c .container {
+    width: 90%;
+  }
+  .scroll-sec2 .container {
+    width: 90%;
+  }
   .scroll-sec2 .back-text {
     top: -6px;
   }
@@ -10610,7 +10628,7 @@ section.horizontal .animation-wrap.to-left {
   }
   .scroll-sec2 .container h2 {
     padding: 19px 0%;
-    font-size: 1.9em;
+    font-size: 1.4em;
     padding-right: 0%;
     color: #000000;
     line-height: 1.5;
@@ -10620,7 +10638,7 @@ section.horizontal .animation-wrap.to-left {
   }
   .details-f .cont {
     width: 100%;
-    padding-right: 4.6%;
+    padding-right: 0;
   }
   .details-f .cont p {
     font-size: 1.1em;
@@ -10637,10 +10655,17 @@ section.horizontal .animation-wrap.to-left {
     margin-bottom: 7%;
   }
   .scroll-sec2 .container .bo-h {
-    font-size: 2.2em;
+    font-size: 1.9em;
     padding-right: 0%;
-    text-align: center;
-    line-height: 1.5;
+    text-align: left;
+    line-height: 1.3;
+  }
+  .scroll-sec2 .container .bo-h img {
+    position: absolute;
+    width: 30px;
+    top: 0;
+    right: 0;
+    -webkit-animation: rotation 17s infinite linear;
   }
   .serv {
     display: block;
