--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -159,7 +159,7 @@
         line-height: 19px;
         color: #737373;
         margin-top: 0;
-        font-family: 'NeueHaasDisplay-me';
+        font-family: 'Ageo-SemiBold';
     }
 
 }
@@ -842,6 +842,25 @@ ul.aw-cats {
         /* overflow-y: hidden; */
     }
 
+    .page-header {
+        display: block;
+        width: 100%;
+        position: relative;
+        padding-top: 40%;
+        background: #EBEBEB;
+        margin-bottom: 150px;
+        z-index: 2;
+    }
+
+    .aw-categories ul.aw-cats li {
+        font-size: 29px;
+    }
+
+    .recent-post .rec {
+        width: 100%;
+        padding-left: 0;
+    }
+
     #blogs-sction .pr-list {
         width: 100%;
     }
@@ -1035,32 +1054,59 @@ ul.aw-cats {
         .p-prj-caption {
             width: 100%;
             padding-left:
-                17px;
+                0px;
             pointer-events: none;
             -webkit-transform: translateZ(100px);
             transform: translateZ(100px);
             z-index: 4;
             margin-top:
                 30px;
+            justify-content: space-around;
 
         }
 
         .p-prj-caption-name {
-            font-size: 2.3em;
+            font-size: 1.8em;
             letter-spacing: 2.5px;
             font-family: 'NeueHaasDisplay-me';
             color: #000;
-            line-height: 1.2;
+            line-height: 1.4;
             margin-bottom: 1%;
         }
 
         .p-prj-caption-credit {
-            font-size: 15px;
-            letter-spacing: 2px;
+            font-size: 13px;
+            letter-spacing: 1px;
             line-height: 19px;
             color: #737373;
             margin-top: 0;
-            font-family: 'NeueHaasDisplay-me';
+            font-family: 'Ageo-Semibold';
+            display: flex;
+            align-items: center;
+        }
+
+    }
+
+    #blogs-sction {
+        .p-prj-caption {
+            width: 100%;
+            padding-left: 0;
+            pointer-events: none;
+            -webkit-transform: translateZ(100px);
+            transform: translateZ(100px);
+            z-index: 4;
+            margin-top: 30px;
+        }
+
+        .p-prj-caption-credit {
+            font-size: 13px;
+            letter-spacing: 1px;
+            line-height: 19px;
+            color: #737373;
+            margin-top: 0;
+            font-family: 'Ageo-Semibold';
+            display: flex;
+            align-items: center;
         }
     }
 }
