--- a/assets/resources/styles/less/core/_fonts.less
+++ b/assets/resources/styles/less/core/_fonts.less
@@ -91,63 +91,6 @@
 
 
 
-// Freight-Disp-Pro
-@font-face {
-    font-family: 'Freight-book-it';
-    src: url('/fonts/FreightDispProBook-Italic.woff');
-}
-
-@font-face {
-    font-family: 'Freight-light-r';
-    src: url('/fonts/FreightDispProLight-Regular.woff');
-}
-
-@font-face {
-    font-family: 'Freight-medium-it';
-    src: url('/fonts/FreightDispProMedium-Italic.woff');
-}
-
-@font-face {
-    font-family: 'Freight-medium-r';
-    src: url('/fonts/FreightDispProMedium-Regular.woff');
-}
-
-@font-face {
-    font-family: 'Freight-semi-it';
-    src: url('/fonts/FreightDispProSemibold-Italic.woff');
-}
-
-@font-face {
-    font-family: 'Freight-black-it';
-    src: url('/fonts/FreightDispProBlack-Italic.woff');
-}
-
-@font-face {
-    font-family: 'Freight-black-r';
-    src: url('/fonts/FreightDispProBlack-Regular.woff');
-}
-
-@font-face {
-    font-family: 'Freight-bold-it';
-    src: url('/fonts/FreightDispProBold-Italic.woff');
-}
-
-@font-face {
-    font-family: 'Freight-book-r';
-    src: url('/fonts/FreightDispProBook-Regular.woff');
-}
-
-@font-face {
-    font-family: 'Freight-light-it';
-    src: url('/fonts/FreightDispProLight-Italic.woff');
-}
-
-@font-face {
-    font-family: 'Freight-Display-Pro-Semibold';
-    src: url('/fonts/FreightDispProLight-Regular.woff');
-}
-
-
 
 @font-face {
     font-family: 'Ageo';
@@ -175,18 +118,21 @@
     src: url('/fonts/Ageo-SemiBold.woff');
 }
 
-// @font-face {
-//     font-family: 'Ageo';
-//     src: url('/fonts/Ageo.woff');
-// }
-// @font-face {
-//     font-family: 'Ageo';
-//     src: url('/fonts/Ageo.woff');
-// }
-// @font-face {
-//     font-family: 'Ageo';
-//     src: url('/fonts/Ageo.woff');
-// }
+@font-face {
+    font-family: 'Ageo-Medium';
+    src: url('/fonts/Ageo-Medium.woff');
+}
+
+@font-face {
+    font-family: 'Ageo-Light';
+    src: url('/fonts/Ageo-Light.woff');
+}
+
+@font-face {
+    font-family: 'Ageo-Thin';
+    src: url('/fonts/Ageo-Thin.woff');
+}
+
 // @font-face {
 //     font-family: 'Ageo';
 //     src: url('/fonts/Ageo.woff');
