--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -477,7 +477,7 @@
     padding-left: 5%;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    font-family: 'NeueHaasDisplay-me';
+    font-family: 'Ageo';
 }
 
 .carousel-showcase.dark .cas-titles .cs-title a,
@@ -969,9 +969,8 @@ span.apl-background {
 }
 
 span.ac-sign {
-    font-size: 100px;
-    font-weight: 700;
-    letter-spacing: -7.5px;
+    font-size: 90px;
+    letter-spacing: 0px;
     display: inline-block;
     padding-bottom: 20px;
     vertical-align: top;
@@ -1057,7 +1056,7 @@ span.ac-sign {
         font-size: 30px;
         line-height: 40px;
         margin-left: -1px;
-        font-family: 'Ageo-SemiBold';
+        font-family: 'Ageo';
         letter-spacing: 0em;
     }
 }
@@ -1072,6 +1071,7 @@ section:after {
 }
 
 @media only screen and (max-width: 450px) {
+
     .en-page-loader {
         width: 100%;
         height: 100%;
@@ -1114,6 +1114,15 @@ section:after {
         margin-bottom: 35px;
     }
 
+    .flex-mob {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .a-empty-space {
+        width: 0;
+    }
 
     .dd {
         display: none;
@@ -1130,6 +1139,15 @@ section:after {
         color: #fff;
         letter-spacing: 1px;
         font-family: 'NeueHaasDisplay-me';
+    }
+
+    .ac-number {
+        font-size: 80px;
+        height: 117px;
+    }
+
+    span.ac-sign {
+        font-size: 70px;
     }
 }
 
