--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -567,25 +567,31 @@ ul.aw-cats {
 #search {
     align-items: center;
     background: rgba(255, 255, 255, 0.975);
-    height: 0;
+    height: 100vh;
     display: flex;
     justify-content: center;
     opacity: 0;
     position: fixed;
     transition: all .5s;
     width: 100vw;
-    will-change: transform, opacity;
+    will-change: opacity;
     z-index: -1;
+    top: 0;
 
     &:target {
-        height: 100vh !important;
-        opacity: 1;
-        width: 100vw !important;
-        z-index: 2;
 
         .close-btn {
             display: block;
         }
+    }
+}
+
+.open {
+    opacity: 1 !important;
+    z-index: 2 !important;
+
+    .close-btn {
+        display: block;
     }
 }
 
@@ -833,6 +839,17 @@ ul.aw-cats {
 }
 
 @media screen and (max-width:767px) {
+    #searchbox {
+        max-width: 75%;
+    }
+
+    .page-header .wrapper-small .page-title h1.big-title {
+        margin-bottom: -4px;
+        margin-top: 0;
+        line-height: 20px;
+        font-size: 87px;
+        margin-left: 0;
+    }
 
     .head-ser {
         padding-top: 15%;
