--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1012,8 +1012,34 @@
         padding-top: 64px;
     }
 
+    .lets img {
+        top: 70px;
+        right: -60px;
+        width: 88%;
+    }
+
+    .lets .flex-row h1 {
+        font-size: 3em;
+        overflow: hidden;
+        -webkit-perspective: 600px;
+        perspective: 600px;
+    }
+
     .web {
         display: none;
+    }
+
+    .lets {
+        .flex-row {
+            P {
+                text-align: right;
+                font-size: 1.2em;
+                text-transform: uppercase;
+                padding-left: 0%;
+                letter-spacing: 2px;
+                margin-top: 21%;
+            }
+        }
     }
 
     .contact-form-block {
